--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,19 @@ jobs:
         with:
           go-version: '1.25'
 
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
+      - name: Cache Go modules
+        uses: actions/cache@v4
         with:
-          version: latest
-          args: --timeout=5m
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Download dependencies
+        run: go mod download
+
+      - name: Run golangci-lint
+        run: make lint
 
   build:
     name: Build
